--- a/index.html
+++ b/index.html
@@ -5,66 +5,73 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Antonia ❤️</title>
 
+<!-- Tipografías románticas -->
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
 <style>
 body{
     margin:0;
-    font-family: 'Segoe UI', sans-serif;
-    background: linear-gradient(135deg,#ff9a9e,#fad0c4);
+    font-family: 'Poppins', sans-serif;
+    background: linear-gradient(135deg,#ff758c,#ff7eb3);
     color:white;
     text-align:center;
+    overflow-x:hidden;
 }
 
 section{
-    padding:60px 20px;
+    padding:70px 20px;
 }
 
 h1{
-    font-size:3em;
+    font-family: 'Great Vibes', cursive;
+    font-size:4em;
     margin-bottom:10px;
 }
 
 h2{
+    font-weight:600;
     font-size:2em;
     margin-bottom:20px;
 }
 
 p{
     font-size:1.2em;
-    max-width:700px;
+    max-width:750px;
     margin:auto;
-    line-height:1.6;
+    line-height:1.8;
 }
 
 .galeria{
     display:flex;
     flex-wrap:wrap;
     justify-content:center;
-    gap:15px;
-    margin-top:30px;
+    gap:20px;
+    margin-top:40px;
 }
 
 .galeria img{
-    width:250px;
-    height:250px;
+    width:260px;
+    height:260px;
     object-fit:cover;
-    border-radius:20px;
-    box-shadow:0 8px 20px rgba(0,0,0,0.3);
-    transition:0.3s;
+    border-radius:25px;
+    box-shadow:0 10px 25px rgba(0,0,0,0.4);
+    transition:0.4s;
 }
 
 .galeria img:hover{
-    transform:scale(1.05);
+    transform:scale(1.08);
 }
 
 button{
     background:white;
     color:#ff4b6e;
     border:none;
-    padding:15px 30px;
+    padding:15px 35px;
     font-size:1.2em;
-    border-radius:30px;
+    border-radius:40px;
     cursor:pointer;
     transition:0.3s;
+    font-weight:600;
 }
 
 button:hover{
@@ -73,8 +80,9 @@ button:hover{
 }
 
 footer{
-    padding:30px;
+    padding:40px;
     font-size:0.9em;
+    opacity:0.9;
 }
 </style>
 </head>
@@ -83,52 +91,54 @@ footer{
 
 <section>
 <h1>Antonia Ledezman ❤️</h1>
-<p>Desde el 14 de diciembre empezó algo que jamás imaginé que me haría tan feliz.</p>
-<p>Llevamos casi tres meses… y han sido los meses más lindos de mi vida.</p>
+<p>Desde el 14 de diciembre empezó la historia más bonita que he vivido.</p>
+<p>Ya casi tres meses contigo… y cada día me enamoro más.</p>
 </section>
 
 <section>
 <h2>Para ti, mi amor 💌</h2>
 <p>
-Antonia… desde que llegaste a mi vida todo cambió.
-Cada día contigo es más bonito, más real, más nuestro.
-No son solo dos meses, son recuerdos, risas,
-mensajes hasta tarde y esa sensación de que quiero seguir construyendo algo contigo.
+Antonia… llegaste a mi vida y todo cambió.
+Tus abrazos, tus risas, nuestras conversaciones,
+nuestros momentos simples que se volvieron inolvidables.
+No son solo meses… es el comienzo de algo que quiero que dure mucho tiempo.
 </p>
 
 <p>
-Gracias por estos casi tres meses maravillosos.
-Gracias por ser tú.
-Te amo hoy… y todos los días.
+Gracias por elegirme.
+Gracias por quedarte.
+Te amo hoy, mañana y siempre.
 — Yohan ❤️
 </p>
 </section>
 
 <section>
-<h2>Nuestros comienzos ✨</h2>
-<p>Aquí van nuestros recuerdos desde que empezó todo…</p>
+<h2>Nuestros recuerdos ✨</h2>
+<p>Aquí están algunos de nuestros momentos más lindos.</p>
 
 <div class="galeria">
-    <img src="foto1.jpg" alt="Nuestro momento 1">
-    <img src="foto2.jpg" alt="Nuestro momento 2">
-    <img src="foto3.jpg" alt="Nuestro momento 3">
+    <img src="foto1.jpg" alt="Momento 1">
+    <img src="foto2.jpg" alt="Momento 2">
+    <img src="foto3.jpg" alt="Momento 3">
+    <img src="foto4.jpg" alt="Momento 4">
+    <img src="foto5.jpg" alt="Momento 5">
 </div>
 </section>
 
 <section>
 <h2>Un botón peligroso 👀</h2>
 <button onclick="mostrarMensaje()">Te amo mugrosa</button>
-<p id="mensajeSecreto" style="margin-top:20px; display:none; font-size:1.3em;"></p>
+<p id="mensajeSecreto" style="margin-top:25px; display:none; font-size:1.3em;"></p>
 </section>
 
 <footer>
-Hecho con amor por Yohan ❤️
+Hecho con todo mi amor para ti ❤️
 </footer>
 
 <script>
 function mostrarMensaje(){
     document.getElementById("mensajeSecreto").innerHTML =
-    "Sí, a ti te digo mugrosa… pero eres la mugrosa más hermosa del mundo 😘❤️ Gracias por existir en mi vida.";
+    "Sí, a ti te digo mugrosa… pero eres la mugrosa más hermosa del universo 😘❤️ Gracias por hacer mi vida más bonita.";
     document.getElementById("mensajeSecreto").style.display = "block";
 }
 </script>
