--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@ diría tu nombre sin dudarlo.
 <h2>Nuestros recuerdos 💕</h2>
 
 <div class="galeria">
-<img src="foto1.jpg">
-<img src="foto2.jpg">
-<img src="foto3.jpg">
-<img src="foto4.jpg">
-<img src="foto5.jpg">
+<img src="ad1734e0-5f70-4ca6-9b4c-27bb33551e2f.jpeg">
+<img src="IMG_0634.jpeg">
+<img src="IMG_0577.jpeg">
+<img src="IMG_0343.jpeg">
+<img src="383c02d0-31be-4cd8-8847-cdccb7a02278.jpeg">
 </div>
 </section>
 
